# Image-Processing

./: CMakeLists.txt  LICENSE  README.md  run.sh
kernels/: test.cl
src/: cl_common.h  cl_init.h  cl_init_helpers.h  main.c  png_utils.h
src/file/: file_utils.h
src/kernels/: grayscale.cl  grayscale2.cl  grayscale_2.cl
src/kernels/spirv/: grayscale.cl.spv  grayscale_2.cl.spv
src/opencl/: cl_common.h  cl_init.h  cl_init_helpers.h  cl_init_utils.h  cl_profiles.h  cl_utils.h
src/opencl/mali/: mali_utils.h
src/png/: png_utils.h
